# SEDAR-Data

./: .env.example  .gitignore  Makefile  README.md  breaker.py  pyproject.toml  scrape.py
.github/workflows/: ci.yml
docs/: authorization.example.txt  sedar-plus-and-data-access.md
sedar/: __init__.py  cli.py  compliance.py  config.py
sedar/legacy/: README.md  __init__.py  breaker.py  scrape.py
sedar/sedarplus/: __init__.py  browser.py  download.py  issuers.py  parsers.py  profiles.py  search.py
sedar/storage/: __init__.py  engine.py  schema.py
tests/: __init__.py  test_core.py
tests/fixtures/: documents.csv  issuers.csv  search_results.html
